--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,96 @@
+@charset "UTF-8";
+
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    background-color: #686767a8;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 
 .logo {
-    width: auto;
-    height: 80px;
-
+  width: auto;
+  height: 80px;
+  animation: rotateHorizontal 1s linear;
 }
-/* nav hambur */
 
-header {
-    background-color: white;
+@keyframes rotateHorizontal {
+  0% {
+    transform: rotateY(0deg);
+  }
+
+  100% {
+    transform: rotateY(360deg);
+  }
+}
+
+h1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+h2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+img {
+  width: 30vw;
+  height: 60vh;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+@media screen and (min-width: 750px) {
+  .logo {
+    width: 50%;
+    height: 40%;
+    margin-top: 10px;
+    margin-left: 100px;
+  }
+
+  .inicio {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: baseline;
+  }
+
+  .carousel {
+    grid-area: carousel;
+    width: 90%;
+    height: 95%;
+  }
+
+  .textInicio {
+    grid-area: textInicio;
+    margin-right: 5%;
+    text-align: center;
+    position: relative;
+    display: block;
+    width: 50%;
+  }
+}
+
+body {
+  background-color: rgba(104, 103, 103, 0.6588235294);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+header {
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 nav {
@@ -58,58 +121,124 @@ li a:hover {
 }
 
 footer {
-    background-color: #f8f4f4;
-    position: baseline;
-    text-align: center;
-    bottom: 1px;
-    width: 100%;
-}
-h1, h2{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-img{
+  bottom: 1px;
   width: 100%;
+  font-size: medium;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+  clear: both;
+  margin-top: auto;
+}
+
+.TextCarrousel {
+  background-color: rgba(255, 255, 255, 0.4941176471);
+}
+
+.textInicio {
+  display: flex;
+  flex-direction: column;
   height: auto;
 }
-.TextCarrousel{
-  background-color: #ffffff7e;
+
+.H2Home {
+  margin-top: 10px;
+  font-size: 20px;
 }
-.textInicio{
+
+.textoInc {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.inicio {
+  margin-bottom: 20px;
+}
+
+/* Reset de estilos para eliminar márgenes y rellenos predeterminados */
+body,
+h1,
+h2,
+p,
+img {
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+  height: auto;
+}
+
+.titulo {
+  font-size: 24px;
+}
+
+.servicio {
+  padding: 1rem;
+  border: 1px solid #ddd;
+  background-color: #f9f9f9;
+  box-sizing: border-box;
+  float: left;
+  text-align: center;
+}
+
+.imgS,
+.imgH {
+  width: 80%;
+  height: 90%;
+  display: block;
+  margin: 0 auto 1rem;
+}
+
+.servicio p {
+  height: 50%;
+  overflow: hidden;
+  font-size: medium;
+}
+
+.bodyServ {
   display: flex;
   flex-direction: column;
 }
-@media screen and (min-width: 750px){
-  .logo{
-    width: 50%;
-    height: 40%;
-    margin-top: 10px;
-    margin-left: 100px;
-}
-  .inicio{
-    display:flex ;
-    flex-direction: row;
-  }
-  .carousel{
-    grid-area: carousel;
-    width: 95%;
-    height: 85%;
-  }
-  .textInicio{
-    grid-area: textInicio;
-    margin: 0 20px;
-    display: block;
-    width: 50%;
-  }
-  .inicio{
+
+@media screen and (min-width: 750px) {
+  .bodyServ {
     display: flex;
     flex-direction: row;
-    justify-content: baseline;
-    /* margin: 0%;
-    display: grid;
-    grid-template-areas:
-       "carousel""textInicio";
-    grid-template-columns: 1fr 1fr; */
+  }
+
+  .servicio {
+    width: 50%;
+    height: 400px;
   }
 }
+
+.textoNos {
+  margin: 50px 100px;
+}
+
+h1 {
+  margin: 10px 0px;
+}
+
+h2 {
+  font-size: 30px;
+  margin: 20px 0px;
+}
+
+h3 {
+  font-size: 23px;
+  text-align: left;
+  margin: 20px 0px;
+}
+
+h4 {
+  font-size: 20px;
+  margin: 20px 0px;
+}
+
+p {
+  font-size: 15px;
+  margin: 20px 0px;
+}
+
+/*# sourceMappingURL=style.css.map */
